# RAG-Course

./: .gitignore  README.md  pyproject.toml
CH1-Preprocessing/hoopla/: main.py
CH1-Preprocessing/hoopla/src/: searching.py  text_processing_pipeline.py
cli/: augmented_generation_cli.py  evaluation_cli.py  semantic_search_cli.py
cli/lib/: augmented_generation.py  gemini_utils.py  keyword_search.py  semantic_search.py
movie-searching/: .gitignore  README.md  pyproject.toml
movie-searching/cli/: describe_image_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py  test_gemini.py
movie-searching/cli/lib/: gemini_utils.py  hybrid_search.py  keyword_search.py  multimodal_search.py  search_utils.py  semantic_search.py
movie-searching/src/: searching.py  text_processing_pipeline.py
