[project]
name = "movie-searching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "google-genai>=1.50.1",
    "nltk==3.9.1",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "timm>=1.0.22",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
